# ton-rs

./: .gitignore  .release-plz.toml  Cargo.toml  README.md
.github/scripts/: cargo-semver-checks
.github/workflows/: build.yml  coverage.yml  release.yml
benchmarks/: Cargo.toml  async_bench_example.rs  benchmark_utils.rs  boc_to_from_bytes.rs  build_dict_cell.rs  build_empty_cell.rs  build_full_cell.rs  cell_deep_copy.rs  cell_read_write.rs  fastnum_conversion_compare.rs  read_num_primitives.rs  tx_emul_bench_runner.py  tx_emulator_bench.rs  write_num_primitives.rs
crates/ton/: CHANGELOG.md  Cargo.toml
crates/ton/src/: block_tlb.rs  emulators.rs  errors.rs  lib.rs  libs_dict.rs  net_config.rs  tep.rs  test_utils.rs
crates/ton/src/block_tlb/: _test_block_data.rs  account_types.rs  config_types.rs  merkle_update.rs  out_action.rs
crates/ton/src/contracts/: contracts_impl.rs
crates/ton/src/emulators/: emul_utils.rs  emulator_pool.rs  tvm_emulator.rs  tx_emulator.rs
crates/ton/src/lite_client/: req_params.rs
crates/ton/src/tep/: metadata.rs  mintless_airdrop.rs  tvm_result.rs
crates/ton/src/tl_client/: callback.rs  connection.rs  tl.rs  tl_client_trait.rs
crates/ton/src/tlb_adapters/: bin_tree.rs
crates/ton/src/ton_wallet/: mnemonic.rs  wallet_code.rs
crates/ton/tests/tests/: test_contract_client.rs  test_contracts.rs  test_lite_client.rs
crates/ton_core/: CHANGELOG.md  Cargo.toml
crates/ton_core/src/: bits_utils.rs  cell.rs  errors.rs  serde.rs  types.rs
crates/ton_core/src/cell/: _test_build_parse.rs  ton_cell.rs  ton_cell_num.rs  ton_hash.rs
crates/ton_core/src/types/: coins.rs  tlb_core.rs  tx_lt_hash.rs
crates/ton_macros/: CHANGELOG.md  Cargo.toml
crates/ton_macros/src/: from_tvm_stack_derive.rs  lib.rs  tlb_derive.rs  tlb_derive_struct.rs  ton_methods.rs
examples/: Cargo.toml  cell_perf_boc_from_bytes.rs  emulate_get_method.rs  enum.rs  perf_build_cell.rs  perf_cell_from_boc.rs  read_tx_data.rs  ton_transfer.rs  types_tlb_build_dict_large.rs
resources/net_config/: testnet_public.json
resources/tests/: contract_state_EQCGScrZe1xbyWqWDvdI6mzP-GAcAWFv6ZXuaJOuSqemxku4_16BEFDC4512CA3FFAA2919E1F0D7635588EDCB9FA7D3990FE83E89275C291CC7_64954068000009.json  tonviewer_block_0_8000000000000000_57314442.hex  tx_16BEFDC4512CA3FFAA2919E1F0D7635588EDCB9FA7D3990FE83E89275C291CC7_64954068000009.hex  txemulord_EQAQAUqxkIId2T0l1v0CBjczoPW7pS-5pQ0-J2Ap1pvac9XY_64826315000001.json  txemulord_with_libs.json
ton/: CHANGELOG.md  Cargo.toml
ton/src/: block_tlb.rs  contracts.rs  emulators.rs  errors.rs  lib.rs  libs_dict.rs  lite_client.rs  net_config.rs  tep.rs  test_utils.rs  thread_pool.rs  tl_client.rs  tlb_adapters.rs  ton_wallet.rs
ton/src/block_tlb/: _test_block_data.rs  block_types.rs  coins.rs  currency_collection.rs  hash_update.rs  out_action.rs  state_init.rs  tvm_types.rs
ton/src/block_tlb/account_types/: account_state.rs  account_status.rs  account_storage.rs  shard_account.rs
ton/src/block_tlb/block_types/: block.rs  block_extra.rs  block_id_ext.rs  block_info.rs  block_prev_info.rs  mc_block_extra.rs  value_flow.rs
ton/src/block_tlb/config_types/: config_param_18.rs  config_params.rs
ton/src/block_tlb/msg_types/: common_msg_info.rs  msg.rs
ton/src/block_tlb/shard_types/: shard_accounts_blocks.rs  shard_descr.rs  shard_ident.rs
ton/src/block_tlb/tvm_types/: from_tvm_stack.rs  to_tvm_stack.rs  traits.rs  tvm_cell_slice.rs  (+3 more)
ton/src/clients/: net_config.rs
ton/src/contracts/: client.rs  contract_client.rs  contract_methods.rs  contracts_impl.rs  jetton_master.rs  jetton_wallet.rs  nft_collection.rs  nft_item.rs  ton_contract.rs  wallet.rs
ton/src/emulators/: async_tx_emulator.rs  emul_bc_config.rs  emul_utils.rs  emulator_pool.rs  rsquad_converter.rs  thread_pool.rs  tvm_emulator.rs  tx_emulator.rs  tx_emulator_pool.rs
ton/src/lite_client/: builder.rs  client.rs  config.rs  connection.rs  lite_types.rs  liteapi_serde.rs  metrics.rs
ton/src/tep/: excesses_msg.rs  mintless_airdrop.rs  nft.rs  snake_data.rs  tvm_results.rs
ton/src/thread_pool/: builder.rs  jobs_counter.rs  task_counter.rs
ton/src/tl_client/: builder.rs  callback.rs  config.rs  connection.rs  env.rs  env_setup.rs  tl.rs  tl_client_trait.rs
ton/src/tlb_adapters/: bin_tree.rs  const_len.rs  dict.rs
ton/src/ton_wallet/: mnemonic.rs  wallet_code.rs  wallet_constants.rs  wallet_version.rs
ton/tests/tests/: test_contract_client.rs  test_contracts.rs  test_lite_client.rs  test_metadata.rs  test_tl_client.rs  utils.rs
ton_core/: CHANGELOG.md  Cargo.toml
ton_core/src/: cell.rs  constants.rs  errors.rs  lib.rs  serde.rs
ton_core/src/boc/: mod.rs
ton_core/src/boc/raw_boc/: from_bytes.rs
ton_core/src/cell/: _test_build_parse.rs  boc.rs  build_parse.rs  cell_builder.rs  cell_meta.rs  cell_parser.rs  mod.rs  ton_cell.rs  ton_cell_num.rs  ton_cell_utils.rs  ton_hash.rs
ton_core/src/cell/boc/: raw_boc.rs  raw_cell.rs  raw_from_bytes.rs  raw_from_ton_cells.rs  raw_into_ton_cells.rs  raw_to_bytes.rs  raw_types.rs  read_var_size.rs
ton_core/src/cell/build_parse/: builder.rs  parser.rs  test_build_parse.rs
ton_core/src/cell/cell_meta/: cell_meta_builder.rs  cell_type.rs
ton_core/src/cell/meta/: cell_meta_builder.rs
ton_core/src/cell/ton_cell_num/: _ton_cell_num_tests.rs  ton_cell_bignum.rs  ton_cell_fastnum.rs  ton_cell_primitives.rs
ton_core/src/traits/: contract_provider.rs  tlb.rs
ton_core/src/traits/tlb/: test_tlb_enum.rs  tlb_bool.rs  tlb_cell.rs  tlb_num.rs  tlb_opt.rs
ton_core/src/types/: coins.rs  extra_currency.rs  mod.rs  tlb_core.rs  tlb_object.rs  ton_address.rs  tx_id.rs  tx_lt_hash.rs
ton_core/src/types/tlb_core/: adapters.rs  either_ref.rs  msg_address.rs  tlb_ref.rs  var_len.rs
ton_core/src/types/tlb_core/adapters/: const_len.rs  tlb_ref.rs  tlb_ref_opt.rs  ton_cell_ref.rs  unary_len.rs
ton_macros/: CHANGELOG.md  Cargo.toml  README.md
ton_macros/src/: lib.rs  tlb_derive.rs  tlb_derive_enum.rs  tlb_derive_struct.rs  ton_contract.rs  ton_method.rs  ton_methods.rs  tvm_result_derive.rs  tvm_type_derive.rs  utils.rs
(+157 files in other folders)
