[workspace]
resolver = "2"
members = [
    "ton",
    "ton_core",
    "ton_macros",
    "benchmarks",
    "examples",
]

[workspace.package]
description = "A collection of types and utilities for interacting with the TON network"
keywords = ["ton", "the-open-network", "blockchain", "crypto"]
edition = "2021"
authors = ["Sild <silddev@pm.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sild/ton_lib_rs"
rust-version = "1.81"
readme = "README.md"
publish = false

[workspace.dependencies]
# Internal (stonfi-managed)
ton_macros = {path = "ton_macros", version = "0"}
ton_core = {path = "ton_core", version = "0"}
tonlib-sys = { version = "2025.10", features = ["with_debug_info"] }


# External

# ton_core
async-trait = "0.1"
base64 = "0.22"
bitstream-io = "4"
bitvec = "1.0"
crc = "3"
fastnum =  "0.7"
hex = "0.4"
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
once_cell = { version = "1", features = ["parking_lot"] }
sha2 = "0.10"
thiserror = "2.0"


# ton
adnl = "2.0"
async-recursion = { version = "1" }
auto_pool = { version = "0.3", features = ["async"] }
base64-serde = "0.8"
derive_setters = "0.1"
futures-util = "0.3"
hmac = "0.12"
libc = "0.2"
moka = { version = "0.12", features = ["async-lock", "future"]}
nacl = "0.5"
parking_lot = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.9"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
tokio = "1"
tokio-retry = "0.3"
tokio-tower = "0.6"
ton_liteapi = "0.2"
tower = { version = "0.5", features = ["util"] }


# tests
anyhow = "1.0"
log4rs = "1.4"
tokio-test = "0.4"

[profile.bench]
debug = true
[profile.release]
debug = true
