[package]
name = "benchmarks"
rust-version.workspace = true
edition.workspace = true
publish = false

[features]
tonlibjson = ["ton/tonlibjson"]



[dev-dependencies]
ton = { path = "../ton", version = "0" }
ton_core = { path = "../ton_core", version = "0" }
auto_pool.workspace = true
ton_lib_core_008 = { package = "ton_lib_core", version = "0.0.8" }
ton_lib_0039 = { package = "ton_lib", version = "0.0.39" }

base64 = "0.22"
fastnum.workspace = true
num-bigint.workspace = true
criterion = "0.7"
bitstream-io.workspace = true
hex = "0.4"
anyhow = "1.0"
tokio-test = "0.4"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
futures-util.workspace = true
core_affinity = { version = "0.5" }
tonlib-core = "0.26"
libc = "0.2.176"
clap = { version = "4.5.51", features = ["derive"] }

[[bench]]
name = "build_empty_cell"
path = "build_empty_cell.rs"
harness = false

[[bench]]
name = "build_full_cell"
path = "build_full_cell.rs"
harness = false

[[bench]]
name = "cell_read_write"
path = "cell_read_write.rs"
harness = false

[[bench]]
name = "build_dict_cell"
path = "build_dict_cell.rs"
harness = false

[[bench]]
name = "write_num_primitives"
path = "write_num_primitives.rs"
harness = false

[[bench]]
name = "cell_deep_copy"
path = "cell_deep_copy.rs"
harness = false

[[bench]]
name = "tx_emulator_bench"
path = "tx_emulator_bench.rs"
harness = false
required-features = ["tonlibjson"]
