[package]
name = "ton_core"
version = "0.0.1"
description.workspace = true
keywords.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true
publish = true

include = [
    "Cargo.toml",
    "src/*",
    "resources/*",
]

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
# Internal
ton_macros.workspace = true

# External
bitstream-io.workspace = true
thiserror.workspace = true
log.workspace = true
crc.workspace = true
hex.workspace = true
base64.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
fastnum.workspace = true
async-trait.workspace = true
sha2.workspace = true
once_cell.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
smallvec.workspace = true
bitvec.workspace = true

[dev-dependencies]
anyhow.workspace = true
tokio-test.workspace = true
log4rs.workspace = true
